--- a/WhereToPlay/build.gradle
+++ b/WhereToPlay/build.gradle
@@ -20,6 +20,7 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath 'com.jakewharton:butterknife-gradle-plugin:8.8.1'
         classpath 'com.neenbedankt.gradle.plugins:android-apt:1.8'
+        classpath 'com.meituan.android.walle:plugin:1.1.6'
 //        classpath "com.tencent.tinker:tinker-patch-gradle-plugin:1.7.10"
 
         // NOTE: Do not place your application dependencies here; they belong
@@ -38,3 +39,5 @@ allprojects {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
