娱乐行业从业申请

--- a/WhereToPlay/app/build.gradle
+++ b/WhereToPlay/app/build.gradle
@@ -2,6 +2,7 @@ apply plugin: 'com.android.application'
 //apply plugin: 'com.jakewharton.butterknife'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'walle'
 
 android {
 
@@ -16,11 +17,16 @@ android {
         incremental true
     }
 
-    packagingOptions{
-        exclude  'META-INF/rxjava.properties'
+
+    signingConfigs {
+        android {
+            storeFile file("keystore/hpzl_keystore")
+            storePassword "adminhpzl"
+            keyAlias "ktv_key"
+            keyPassword "adminhpzl"
+        }
+
     }
-
-
 
 
 
@@ -28,9 +34,9 @@ android {
         applicationId "com.fanc.wheretoplay"
         minSdkVersion 17
         targetSdkVersion 27
-        versionCode 201890309
+        versionCode 201890308
 
-        versionName "2018.03.09"
+        versionName "2018.03.08"
 
 
         sourceSets.main {
@@ -54,25 +60,15 @@ android {
 
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-
-    /*signingConfigs {
-        releaseConfig {
-            storeFile file("/Users/Joenny/Desktop/ktvAndroid/hpzl_keystore.jks")
-            storePassword "adminhpzl"
-            keyAlias "ktv_key"
-            keyPassword "adminhpzl"
-
-        }
-
-    }
     buildTypes {
         release {
-            signingConfig signingConfigs.releaseConfig
+
             buildConfigField "boolean", "LOG_DEBUG", "false"
             minifyEnabled true
             zipAlignEnabled true
             shrinkResources true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+            signingConfig signingConfigs.android
 
         }
         debug {
@@ -82,18 +78,18 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
             signingConfig signingConfigs.debug
         }
-    }*/
+    }
     dataBinding {
         enabled = true
     }
 
 
-    productFlavors {
+   /* productFlavors {
 
         _test {
             dimension "color"
         }
-       /* _company {
+        _company {
             dimension "color"
         }
         _360 {}
@@ -109,17 +105,30 @@ android {
         _oppo {}
         _vivo {}
         _meizu {}
-        _sougou {}*/
+        _sougou {}
 
-    }
+    }*/
 
-    productFlavors.all {
+    /*productFlavors.all {
         flavor -> flavor.manifestPlaceholders = [UMENG_CHANNEL_VALUE: name]
-    }
+    }*/
+
+
+}
+
+configurations.all {
+    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
 }
 
 
-
+walle {
+    // 指定渠道包的输出路径
+    apkOutputFolder = new File("${project.buildDir}/outputs/channels");
+    // 定制渠道包的APK的文件名称
+    apkFileNameFormat = '${channel}.apk';
+    // 渠道配置文件
+    channelFile = new File("${project.getProjectDir()}/channel")
+}
 
 repositories {
     flatDir {
@@ -138,7 +147,7 @@ dependencies {
 
     compile 'com.android.support:multidex:1.0.3'
     compile 'com.youth.banner:banner:1.4.10'
-    
+    compile 'com.orhanobut:logger:1.15'
     compile 'cn.finalteam:galleryfinal:1.4.8.7'
     compile 'com.uwetrottmann.photoview:library:1.2.4'
     compile 'cn.jiguang.sdk:jpush:3.0.8'
@@ -159,9 +168,7 @@ dependencies {
     compile 'com.umeng.analytics:analytics:6.1.2'
     debugCompile 'com.amitshekhar.android:debug-db:1.0.0'
     compile 'com.jcodecraeer:xrecyclerview:1.5.9'
-    compile 'com.github.f0ris.sweetalert:library:1.5.1'
-    compile 'com.jph.takephoto:takephoto_library:4.0.3'
-
+    compile 'com.meituan.android.walle:library:1.1.6'
 
 }
 
